k8s-manifests/02-security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: demo
spec:
  podSelector: {} # Aplica a TODOS los pods del namespace
  policyTypes:
  - Ingress
